new dark design

--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -86,8 +86,8 @@
  }
  ._icon-TypeScript:before {
   content: "\e922";
-	text-shadow: 0 0 10px #3474bd;
-	color: #2b5b92;
+	text-shadow: 0 0 10px #0b121a;
+	color: #77b3f7;
 }
  ._icon-react:before {
 	content: "\e912";
