fixed the layout

--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -81,13 +81,13 @@
  }
  ._icon-Vue:before {
 	content: "\e911";
-	text-shadow: 0 0 10px #59dda1;
-	color: #11291e;
+	// text-shadow: 0 0 10px #59dda1;
+	// color: #11291e;
  }
  ._icon-TypeScript:before {
   content: "\e922";
-	text-shadow: 0 0 10px #0b121a;
-	color: #77b3f7;
+	// text-shadow: 0 0 10px #0b121a;
+	// color: #77b3f7;
 }
  ._icon-react:before {
 	content: "\e912";
